tests/ui/type/pattern_types/coercion.stderr
error[E0308]: mismatched types
  --> $DIR/coercion.rs:11:5
   |
LL | fn drop_pattern_type_changing(arg: pattern_type!(u32 is 1..)) -> u64 {
   |                                                                  --- expected `u64` because of return type
LL |     arg
   |     ^^^ expected `u64`, found `(u32) is 1..`

error[E0308]: mismatched types
  --> $DIR/coercion.rs:15:5
   |
LL | fn drop_pattern_nested(arg: Option<pattern_type!(u32 is 1..)>) -> Option<u32> {
   |                                                                   ----------- expected `Option<u32>` because of return type
LL |     arg
   |     ^^^ expected `Option<u32>`, found `Option<(u32) is 1..>`
   |
   = note: expected enum `Option<u32>`
              found enum `Option<(u32) is 1..>`

error[E0308]: mismatched types
  --> $DIR/coercion.rs:27:5
   |
LL | fn relax_pattern(arg: pattern_type!(u32 is 2..)) -> pattern_type!(u32 is 1..) {
   |                                                     ------------------------- expected `(u32) is 1..` because of return type
LL |     arg
   |     ^^^ expected `(u32) is 1..`, found `(u32) is 2..`
   |
   = note: expected pattern type `(u32) is 1..`
              found pattern type `(u32) is 2..`

error[E0308]: mismatched types
  --> $DIR/coercion.rs:53:9
   |
LL | fn arms3(b: bool) -> pattern_type!(u32 is 1..) {
   |                      ------------------------- expected `(u32) is 1..` because of return type
LL |     if b {
LL |         0
   |         ^ expected `(u32) is 1..`, found integer
   |
   = note: expected pattern type `(u32) is 1..`
                      found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/coercion.rs:66:9
   |
LL | fn arms4(b: bool) -> pattern_type!(u32 is 1..) {
   |                      ------------------------- expected `(u32) is 1..` because of return type
...
LL |         0
   |         ^ expected `(u32) is 1..`, found integer
   |
   = note: expected pattern type `(u32) is 1..`
                      found type `{integer}`

error[E0599]: no method named `foo` found for pattern type `(u32) is 1..` in the current scope
  --> $DIR/coercion.rs:81:11
   |
LL |     foo().foo();
   |           ^^^ method not found in `(u32) is 1..`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Foo` defines an item `foo`, perhaps you need to implement it
  --> $DIR/coercion.rs:70:1
   |
LL | trait Foo {
   | ^^^^^^^^^

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
